urmanac.com/deploy/spinkube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: urmanac-com
  namespace: tenant-test
spec:
  ingressClassName: tenant-test
  rules:
  - host: urmanac.com
    http:
      paths:
      - backend:
          service:
            name: urmanac-com
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - urmanac.com
    secretName: urmanac-com-tls
